--- a/admin/layout/css/_inputstyle.scss
+++ b/admin/layout/css/_inputstyle.scss
@@ -10,7 +10,7 @@
    border-radius: 10px;
    box-shadow: 2px 2px 5px white;
    padding: 30px 20px 10px;
-   background: #032429;
+   background-color: #032429;
    text-align: center;
    z-index: 1;
    .btnClose {
@@ -42,7 +42,7 @@
             width: 100%;
             padding: 6px 15px;
             color: blue;
-            background: #efefef;
+            background-color: #efefef;
             border: 0;
             border-radius: 7px;
             outline: 0;
@@ -60,8 +60,9 @@
                border : 1px solid $sc;
                border-radius:3px;
                text-shadow: 0 1px 0 rgba(19, 74, 70, 0.4);
-               background: $bc;
-               transform-origin: top right ; //95% 5%;
+               background-color: $bc;
+               color : $c ;
+               transform-origin: 95% 5%;
                transform: rotate(0);
                // There should be a better way
                animation: swing-back 1.4s 1 ease-in-out;
@@ -98,7 +99,7 @@
          .swing:focus,    .swing:active {
             color: red;
             text-indent: 0;
-            background: #fff;
+            background-color: #fff;
             border-top-left-radius: 0;
             border-bottom-left-radius: 0;
             
@@ -127,7 +128,7 @@
          margin: 15px 4%;
          border-radius: 25px;
          outline: none;
-         color: white;
+         color: $c;
          background-color: $bc;
       }
    }
