--- a/admin/layout/css/_wrapper.scss
+++ b/admin/layout/css/_wrapper.scss
@@ -1,28 +1,28 @@
-.wrapper{
+aside.wrapper{
    float: right;
    max-height: 595px ;
    width: 23%;
    overflow-y: auto;
    line-height: 10px;
    margin-top: 41px;
-   .mainMenu{
+   ul.mainMenu{
       padding: 0 2px;
       display: block;
       border-radius: 20px;
       overflow: hidden;
-      .item{
+      li.item{
          border-top: 1px solid rgb(78, 174, 238);
          border-bottom: 1px solid rgb(116, 127, 134);
          overflow: hidden;
-         .btn{
+         a.btn{
             display: block;
             padding: 15px 20px;
             background-color: $bc;
-            color: #fff;
+            color: $c;
             position: relative;
             &:hover{
-               color: yellow ;
-               background-color: black;
+               color: $hc ;
+               background-color: $hbc;
             }
             &:before{
                content: '';
@@ -40,15 +40,15 @@
                margin-right: 10px;
             }
          }
-         .subMenu{
-            background: $sc;
+         div.subMenu{
+            background-color: $sc;
             overflow: hidden;
             transition: max-height 0.7s;
             max-height: 0;
-            a{
+            a {
                display: block;
                padding: 15px 60px 15px 15px;
-               color: #fff;
+               color: $c;
                font-size: 1em;
                border-bottom: 1px solid $mc;
                position: relative;
@@ -65,7 +65,6 @@
                   right: 0;
                   top:0;
                   opacity: 1;
-                  /* background-color: #d8d824; */
                   border-top: 24px solid transparent;
                   border-right: 11px solid $bc;
                   border-bottom: 24px solid transparent;
